# simple-wayland-window

./: Cargo.toml  LICENSE  README.md
src/: main.rs
