[package]
name = "simple-wayland-window"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
image = "0.25.6"
raw-window-handle = "0.6.2"
tempfile = "3.20.0"
wayland-backend = { version = "0.3.10", features = ["client_system", "rwh_06"] }
wayland-client = "0.31.10"
wayland-protocols = { version = "0.32.8", features = ["client"] }
